--- a/css/styles.css
+++ b/css/styles.css
@@ -76,6 +76,7 @@ body {
   color: #042A2B;
   font-family: 'Roboto Slab', serif;
   font-size: 4.8rem;
+  letter-spacing: 0.02em;
   margin-top: 0;
   margin-bottom: 2.8rem;
 }
